break the 'what we offer' section out into partial, add it to the members/funders template, make sure the styles work

--- a/wp-content/themes/inn/homepages/assets/less/inn.less
+++ b/wp-content/themes/inn/homepages/assets/less/inn.less
@@ -27,56 +27,6 @@
       margin-bottom: 1em;
     }
   }
-  #main .row-fluid {
-    .span4 {
-      text-align: center;
-      padding: 2em 5em;
-      @media (max-width: 980px) {
-        padding: 1.5em 2em;
-      }
-      @media (max-width: 600px) {
-        width: 100%;
-        margin: 0;
-        clear: both;
-        padding: 0.5em 10%;
-      }
-    }
-    img {
-      width: 40px;
-      height: 40px;
-      margin-bottom: 0.8em;
-    }
-    h5 {
-      font-size: 20px;
-      font-weight: 400;
-      margin-bottom: 0.25em;
-      a {
-        color: @medgray;
-        &:hover {
-          color: @blue;
-        }
-      }
-    }
-    p {
-      font-size: 16px;
-      font-weight: 300;
-    }
-  }
-  #programs,
-  #member-info {
-    h3 {
-      background-color: @orange;
-      color: @orange;
-      @media (max-width: 600px) {
-        line-height: 1.5;
-        background-color: transparent;
-        margin-bottom: 0.5em;
-      }
-    }
-    h5 a:hover {
-      color: @orange;
-    }
-  }
   #hire-us {
     padding: 3em;
     text-align: center;
