--- a/wp-content/themes/inn/less/style.less
+++ b/wp-content/themes/inn/less/style.less
@@ -214,6 +214,41 @@ html.no-touch .navbar li.home-link > a:hover {
 }
 #main {
   margin: 6em 0 4em;
+  .row-fluid {
+    img {
+      width: 40px;
+      height: 40px;
+      margin-bottom: 0.8em;
+    }
+    .span4 {
+      text-align: center;
+      padding: 2em 5em;
+      @media (max-width: 980px) {
+        padding: 1.5em 2em;
+      }
+      @media (max-width: 600px) {
+        width: 100%;
+        margin: 0;
+        clear: both;
+        padding: 0.5em 10%;
+      }
+    }
+    h5 {
+      font-size: 20px;
+      font-weight: 400;
+      margin-bottom: 0.25em;
+      a {
+        color: @medgray;
+        &:hover {
+          color: @blue;
+        }
+      }
+    }
+    p {
+      font-size: 16px;
+      font-weight: 300;
+    }
+  }
 }
 body.page #content {
   position: relative;
@@ -296,6 +331,22 @@ section,
   color: @xltgray;
   h3 {
   color: @xltgray;
+  }
+}
+
+#programs,
+#member-info {
+  h3 {
+    background-color: @orange;
+    color: @orange;
+    @media (max-width: 600px) {
+      line-height: 1.5;
+      background-color: transparent;
+      margin-bottom: 0.5em;
+    }
+  }
+  h5 a:hover {
+    color: @orange;
   }
 }
 
